# regscope

./: .gitignore  CLAUDE.md  README.md  config.toml.example  pyproject.toml  requirements.txt
dashboard/: app.py
data/dockets/: BOEM-2025-0582.db  NHTSA-2024-0100.db  USCG-2025-0903.db
regscope/: PROBLEMS.md  __init__.py  __main__.py  cli.py  config.py  db.py
regscope/api/: __init__.py  regulations.py
regscope/pipeline/: __init__.py  classify.py  dedup.py  embed.py  extract.py  ingest.py  report.py  topics.py
regscope/utils/: __init__.py  rate_limit.py  text.py
tests/: __init__.py  test_api.py  test_classify.py  test_dedup.py  test_extract.py  test_ingest.py  test_rate_limit.py  test_report.py  test_topics.py
tests/fixtures/: sample_comments.json
